syntax = "proto3";

package proto;

option go_package = "github.com/Lina3386/telegram-bot/pkg/telegram;telegram";

service TelegramAuthAPI {
  rpc RegisterTelegramUser(RegisterTelegramUserRequest) returns (RegisterTelegramUserResponse);
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
}

message RegisterTelegramUserRequest {
  int64 telegram_id = 1;
  string username = 2;
}

message RegisterTelegramUserResponse {
  string token = 1;
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  int64 user_id = 1;
  bool valid = 2;
}


